--- a/rfid_gate.ioc
+++ b/rfid_gate.ioc
@@ -3,6 +3,8 @@ Mcu.Family=STM32L0
 RCC.MSI_VALUE=1048000
 ProjectManager.MainLocation=Src
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PA0-CK_IN.GPIO_Label=LD2
+PA0-CK_IN.GPIOParameters=GPIO_Label
 PA6.Mode=Full_Duplex_Master
 RCC.USART1Freq_Value=2097000
 ProjectManager.ProjectFileName=rfid_gate.ioc
@@ -10,7 +12,7 @@ PA7.Mode=Full_Duplex_Master
 I2C1.I2C_Speed_Mode=I2C_Standard
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32L031K6Tx
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 SPI1.VirtualType=VM_MASTER
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -57,18 +59,18 @@ PB6.Signal=I2C1_SCL
 I2C1.Timing=0x00000202
 PB6.Mode=I2C
 SPI1.CalculateBaudRate=524.0 KBits/s
-Mcu.Pin6=PA7
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 RCC.AHBFreq_Value=1048000
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin2=PA3
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
+Mcu.Pin2=PA0-CK_IN
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
 PA5.Signal=SPI1_SCK
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
@@ -80,7 +82,9 @@ RCC.VCOOutputFreq_Value=48000000
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 ProjectManager.LastFirmware=true
 ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.11.2
+PA0-CK_IN.Signal=GPIO_Output
 MxDb.Version=DB.5.0.60
+PA0-CK_IN.Locked=true
 RCC.APB2Freq_Value=1048000
 ProjectManager.BackupPrevious=false
 MxCube.Version=5.6.0
@@ -128,12 +132,13 @@ PB7.Mode=I2C
 PA14.Signal=SYS_SWCLK
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin13=VP_SYS_VS_Systick
 PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 ProjectManager.ComputerToolchain=false
 RCC.HSI_VALUE=16000000
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin10=PB6
+Mcu.Pin11=PB6
+Mcu.Pin12=PB7
+Mcu.Pin10=PB3
 PB7.Locked=true
 RCC.APB1TimFreq_Value=1048000
 RCC.PWRFreq_Value=1048000
